devops/logistician/logistician.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logistician-app-ingress
spec:
  ingressClassName: "nginx"
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: logistician-app-service
                port:
                  number: 3000
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: logistician-app-service
                port:
                  number: 3010
